kategori connected using xhr

--- a/pages/home.html
+++ b/pages/home.html
@@ -43,7 +43,7 @@
       <div class="kategoriCard">
          <div class="card satu">
             <!-- <h4>Kerajinan Tangan</h4> -->
-            <a href="#">Kerajinan Tangan</a>
+            <a href="#" data-kategori="kerajinan">Kerajinan Tangan</a>
          </div>
          <div class="card dua">
             <!-- <h4>Bahan Pangan</h4> -->
