shop page, items, shadow, before favorit icons adding on the items card

--- a/pages/kerajinan.html
+++ b/pages/kerajinan.html
@@ -1,4 +1,4 @@
-<div class="searchBar">
+<div class="searchBarKerajinan">
    <input
       type="text"
       name="search"
@@ -19,4 +19,28 @@
          />
       </svg>
    </div>
+</div>
+
+<div class="cardItemsContainer">
+   <div class="cardItems">
+      <img src="../img/kursi_estetik.png" alt="kursi minimalis">
+      <h4 class="itemName">Kursi Minimalis</h4>
+      <h4 class="itemPrice">500k</h4>
+   </div>
+   <div class="cardItems">
+      <img src="../img/lampu-belajar.png" alt="kursi minimalis">
+      <h4 class="itemName">Kursi Minimalis</h4>
+      <h4 class="itemPrice">500k</h4>
+   </div>
+   <div class="cardItems">
+      <img src="../img/lampu-belajar.png" alt="kursi minimalis">
+      <h4 class="itemName">Kursi Minimalis</h4>
+      <h4 class="itemPrice">500k</h4>
+   </div>
+   <div class="cardItems">
+      <img src="../img/kursi_estetik.png" alt="kursi minimalis">
+      <h4 class="itemName">Kursi Minimalis</h4>
+      <h4 class="itemPrice">500k</h4>
+   </div>
+   
 </div>
