grid on card item and create favorite button but without notification yet

--- a/pages/kerajinan.html
+++ b/pages/kerajinan.html
@@ -22,7 +22,7 @@
 </div>
 
 <div class="cardItemsContainer">
-   <div class="cardItems">
+   <!-- <div class="cardItems">
       <img src="img/kursi_estetik.png" alt="kursi minimalis">
       <h4 class="itemName">Kursi Minimalis</h4>
       <h4 class="itemPrice">500k</h4>
@@ -42,5 +42,5 @@
       <h4 class="itemName">Kursi Minimalis</h4>
       <h4 class="itemPrice">500k</h4>
    </div>
-   
+    -->
 </div>
