change desc based on name item

--- a/pages/detail.html
+++ b/pages/detail.html
@@ -1,5 +1,5 @@
 <div class="detail">
-   <div class="pageId">
+	<div class="pageId">
 		<svg
 			xmlns="http://www.w3.org/2000/svg"
 			width="22"
@@ -12,37 +12,59 @@
 				fill-rule="evenodd"
 				d="M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 8.5H14.5A.5.5 0 0 0 15 8z"
 			/>
-      </svg>
-      <h3>Detail</h3>
-      <div></div>
-   </div>
-   <div class="itemDetailEl">
-      <div class="detailImg">
-         <img src="../img/kursi_estetik.png" alt="Kursi Minimalis">
-      </div>
-      <div class="detailNamePrice">
-         <h2>Kursi Minimalis</h2>
-         <h3>300k</h3>
-      </div>
-      <div class="detailDesc">
-         <p>Merupakan kursi minimalis yang dibuat dengan menggunakan kayu jati. Kursi ini dapat digunakan sebagai kursi belajar, atau kursi bersantai.</p>
-      </div>
-      <div class="detailRating">
-          <img src="img/icons/star.svg" alt="ratings">
-          <img src="img/icons/star.svg" alt="ratings">
-          <img src="img/icons/star.svg" alt="ratings">
-          <img src="img/icons/star.svg" alt="ratings">
-          <img src="img/icons/star.svg" alt="ratings">
-          <p>(1945 Review)</p>
-      </div>
-      <div class="detailAddToCart">
-         <div class="quantity">
-            <input type="number" name="quantity" min="1" max="10" value="1">
-         </div>
-         <div class="addToCartButton">
-            Tambahkan ke keranjang
-         </div>
-      </div>
-   </div>
-   
+		</svg>
+		<h3>Detail</h3>
+		<div></div>
+	</div>
+	<div class="itemDetailEl">
+		<div class="detailImg">
+			<img src="../img/kursi_estetik.png" alt="Kursi Minimalis" />
+		</div>
+		<div class="detailNamePrice">
+			<h2>Kursi Minimalis</h2>
+			<h3>300k</h3>
+		</div>
+		<div class="detailDesc">
+			<p>
+				Merupakan kursi minimalis yang dibuat dengan menggunakan kayu jati.
+				Kursi ini dapat digunakan sebagai kursi belajar, atau kursi
+				bersantai.
+			</p>
+		</div>
+		<div class="detailRating">
+			<!-- <img src="img/icons/star.svg" alt="ratings" />
+			<img src="img/icons/star.svg" alt="ratings" />
+			<img src="img/icons/star.svg" alt="ratings" />
+			<img src="img/icons/star.svg" alt="ratings" />
+         <img src="img/icons/star.svg" alt="ratings" /> -->
+         
+			<p>(1945 Review)</p>
+		</div>
+		<div class="detailAddToCart">
+			<div class="quantity">
+            <div class="qButton kurang">
+               <h2>-</h2>
+            </div>
+            <input type="number" name="quantity" min="1" max="10" value="1" />
+            <div class="qButton tambah">
+               <h2>+</h2>
+            </div>
+			</div>
+			<div class="addToCartButton">
+				<p>Tambah ke</p>
+				<svg
+					xmlns="http://www.w3.org/2000/svg"
+					width="18"
+					height="18"
+					fill="currentColor"
+					class="bi bi-cart-fill"
+					viewBox="0 0 16 16"
+				>
+					<path
+						d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"
+					/>
+				</svg>
+			</div>
+		</div>
+	</div>
 </div>
