cart page, but stuck wanna try indexDB

--- a/pages/cart.html
+++ b/pages/cart.html
@@ -1,1 +1,48 @@
-belum tersedia
+<div class="cart">
+	<div class="pageId">
+		<svg
+			xmlns="http://www.w3.org/2000/svg"
+			width="22"
+			height="22"
+			fill="currentColor"
+			class="bi bi-arrow-left"
+			viewBox="0 0 16 16"
+		>
+			<path
+				fill-rule="evenodd"
+				d="M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 8.5H14.5A.5.5 0 0 0 15 8z"
+			/>
+		</svg>
+		<h3>Keranjang</h3>
+		<div></div>
+	</div>
+	<div class="cartContainer">
+		<div class="cartItem">
+			<div class="cartItemImg">
+				<img src="img/kursi_estetik.png" alt="Kursi Minimalis" />
+			</div>
+			<div class="cartItemNamePrice">
+				<h2>Kursi Minimalis</h2>
+				<h4>Rp200.000</h4>
+			</div>
+			<div class="cartCheck">
+				<input type="checkbox" name="checkbox" id="checkbox" />
+				<div class="quantity">
+					<div class="qButton kurang">
+						<h2>-</h2>
+					</div>
+					<input
+						type="number"
+						name="quantity"
+						min="1"
+						max="10"
+						value="1"
+					/>
+					<div class="qButton tambah">
+						<h2>+</h2>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
