function re assign

--- a/pages/home.html
+++ b/pages/home.html
@@ -47,11 +47,11 @@
          </div>
          <div class="card dua">
             <!-- <h4>Bahan Pangan</h4> -->
-            <a href="#">Bahan Pangan</a>
+            <a href="#" data-kategori="kerajinan">Bahan Pangan</a>
          </div>
          <div class="card tiga">
             <!-- <h4>Jasa</h4> -->
-            <a href="#">Jasa</a>
+            <a href="#" data-kategori="kerajinan">Jasa</a>
          </div>
       </div>
    </div>
