notification, indexdb, but notification favorit not yet ngantuk

--- a/index.html
+++ b/index.html
@@ -7,7 +7,18 @@
 		<link rel="stylesheet" href="style.css" />
 	</head>
 	<body>
-		<div class="container"></div>
+      <div class="addToNotifContainer">
+         <div class="imgNotif">
+            <img src="img/kursi_estetik.png" alt="Kursi Minimalis">
+         </div>
+         <div class="textNotif">
+            <h3>Kursi Minimalis</h3>
+            <p>Berhasil ditambahkan ke keranjang anda!</p>
+         </div>
+      </div>
+		<div class="container">
+         
+      </div>
 		<footer>
 			<nav>
 				<div class="icon home" data-name="home">
@@ -76,7 +87,9 @@
 					</a>
 				</div>
 			</nav>
-		</footer>
+      </footer>
+      <script src="./js/idb.js"></script>
+      <script src="./js/db.js"></script>
 		<script src="./ajax.js"></script>
 	</body>
 </html>
