delete, payment button but just styling not function

--- a/pages/cart.html
+++ b/pages/cart.html
@@ -1,4 +1,4 @@
-<div class="cart">
+<div class="cartEl">
 	<div class="pageId">
 		<svg
 			xmlns="http://www.w3.org/2000/svg"
@@ -17,6 +17,19 @@
 		<div></div>
 	</div>
 	<div class="cartContainer">
-		
-	</div>
+
+   </div>
+   <div class="deleteButton">
+      <!-- <i class="fas fa-trash"></i> -->
+      <p>Hapus</p>
+   </div>
+   <div class="cartTotalPayment">
+      <div class="totalPayment">
+         <h4>Total</h4>
+         <p>Rp250.000</p>
+      </div>
+      <div class="paymentButton">
+         <p>Pembayaran</p>
+      </div>
+   </div>
 </div>
