delete button with notification and rendering after deleting some item, but payment button not yet

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 	<body>
       <div class="addToNotifContainer">
          <div class="imgNotif">
-            <img src="img/kursi_estetik.png" alt="Kursi Minimalis">
+            <img src="" alt="">
          </div>
          <div class="textNotif">
-            <h3>Kursi Minimalis</h3>
+            <h3>Item</h3>
             <p>Berhasil ditambahkan ke keranjang anda!</p>
          </div>
       </div>
