--- a/index.html
+++ b/index.html
@@ -91,6 +91,6 @@
       </footer>
       <script src="./js/idb.js"></script>
       <script src="./js/db.js"></script>
-		<script src="./ajax.js"></script>
+		<script src="./ajax.js" type="module"></script>
 	</body>
 </html>
