button on payment.html not the button function

--- a/pages/payment.html
+++ b/pages/payment.html
@@ -44,36 +44,62 @@
 			<div class="shippingBody body">
 				<div class="opsi">
 					<ul>
-                  <li>
-                     <p>Jemput ke toko</p>
-                     <input type="checkbox" name="jemput" id="jemput">
-                  </li>
-                  <li>
-                     <p>Diantar gojek</p>
-                     <input type="checkbox" name="gojek" id="gojek">
-                  </li>
-               </ul>
+						<li>
+							<p>Jemput ke toko</p>
+							<input type="checkbox" name="jemput" id="jemput" />
+						</li>
+						<li>
+							<p>Diantar gojek</p>
+							<input type="checkbox" name="gojek" id="gojek" />
+						</li>
+					</ul>
 				</div>
 			</div>
 		</div>
 		<div class="paymentEl">
-			<div class="shippingHead head">
+			<div class="paymentHead head">
 				<h4>Metode Pembayaran</h4>
 			</div>
 			<div class="paymentBody body">
 				<div class="opsi">
 					<ul>
-                  <li>
-                     <p>Bayar di tempat</p>
-                     <input type="checkbox" name="ditempat" id="ditempat">
-                  </li>
-                  <li>
-                     <p>Transfer bank</p>
-                     <input type="checkbox" name="bank" id="bank">
-                  </li>
-               </ul>
+						<li>
+							<p>Bayar di tempat</p>
+							<input type="checkbox" name="ditempat" id="ditempat" />
+						</li>
+						<li>
+							<p>Transfer bank</p>
+							<input type="checkbox" name="bank" id="bank" />
+						</li>
+					</ul>
 				</div>
 			</div>
 		</div>
-	</div>
+		<div class="itemDescEl">
+			<div class="itemDescHead head">
+				<h4>Detail Item</h4>
+			</div>
+			<div class="itemDescBody body">
+				<div class="opsi">
+					<div class="itemDesc">
+						<p>Kursi Minimalis</p>
+						<p>Rp25000 <span>x2</span></p>
+					</div>
+					<div class="itemDesc">
+						<p>Lampu Belajar</p>
+						<p>Rp150000 <span>x1</span></p>
+					</div>
+				</div>
+			</div>
+		</div>
+   </div>
+   <div class="paymentTotalPayment">
+      <div class="totalPayment">
+         <h4>Total</h4>
+         <p>Rp0</p>
+      </div>
+      <div class="paymentButton">
+         <p>Buat Pesanan</p>
+      </div>
+   </div>
 </div>
