payment.html all checking but not indexDB funciton...

--- a/pages/payment.html
+++ b/pages/payment.html
@@ -24,17 +24,9 @@
 			</div>
 			<div class="addressBody body">
 				<p class="addressText">
-					Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque,
-					cum itaque. Id cum iste harum illum maiores porro, blanditiis
-					saepe!
 				</p>
-				<!-- <input type="text" name="alamat" id="alamat" /> -->
-				<textarea
-					name="address"
-					id="address"
-					cols="50"
-					rows="10"
-				></textarea>
+				<textarea name="address" id="address" cols="50" rows="10">13th Street. 47 W 13th St, New York, NY 10011, USA. 20 Cooper Square. 20 Cooper Square</textarea
+				>
 			</div>
 		</div>
 		<div class="shippingEl">
@@ -46,11 +38,11 @@
 					<ul>
 						<li>
 							<p>Jemput ke toko</p>
-							<input type="checkbox" name="jemput" id="jemput" />
+							<input type="checkbox" name="jemput" id="shipping" />
 						</li>
 						<li>
 							<p>Diantar gojek</p>
-							<input type="checkbox" name="gojek" id="gojek" />
+							<input type="checkbox" name="gojek" id="shipping" />
 						</li>
 					</ul>
 				</div>
@@ -65,11 +57,11 @@
 					<ul>
 						<li>
 							<p>Bayar di tempat</p>
-							<input type="checkbox" name="ditempat" id="ditempat" />
+							<input type="checkbox" name="ditempat" id="payment" />
 						</li>
 						<li>
 							<p>Transfer bank</p>
-							<input type="checkbox" name="bank" id="bank" />
+							<input type="checkbox" name="bank" id="payment" />
 						</li>
 					</ul>
 				</div>
@@ -80,26 +72,17 @@
 				<h4>Detail Item</h4>
 			</div>
 			<div class="itemDescBody body">
-				<div class="opsi">
-					<div class="itemDesc">
-						<p>Kursi Minimalis</p>
-						<p>Rp25000 <span>x2</span></p>
-					</div>
-					<div class="itemDesc">
-						<p>Lampu Belajar</p>
-						<p>Rp150000 <span>x1</span></p>
-					</div>
-				</div>
+				<div class="opsi"></div>
 			</div>
 		</div>
-   </div>
-   <div class="paymentTotalPayment">
-      <div class="totalPayment">
-         <h4>Total</h4>
-         <p>Rp0</p>
-      </div>
-      <div class="paymentButton">
-         <p>Buat Pesanan</p>
-      </div>
-   </div>
+	</div>
+	<div class="paymentTotalPayment">
+		<div class="totalPayment">
+			<h4>Total</h4>
+			<p>Rp0</p>
+		</div>
+		<div class="paymentButton">
+			<p>Buat Pesanan</p>
+		</div>
+	</div>
 </div>
