index db for order, and store it and remove cart item

--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
       </footer>
       <script src="./js/idb.js"></script>
       <script src="./js/db.js"></script>
+      <script src="./js/dbP.js"></script>
 		<script src="./ajax.js" type="module"></script>
 	</body>
 </html>
