--- a/pages/profile.html
+++ b/pages/profile.html
@@ -1,38 +1,45 @@
 <div class="profile">
-    <div class="pageId">
-        <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-arrow-left"
-            viewBox="0 0 16 16">
-            <path fill-rule="evenodd"
-                d="M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 8.5H14.5A.5.5 0 0 0 15 8z" />
-        </svg>
-        <h3>Profile</h3>
-        <div></div>
-    </div>
-    <div class="container">
-        <div class="profile-detail">
-            <div class="detail">
-                <h3>Hai, Galih Permana</h3>
-                <span>Semoga harimu menyenangkan!</span>
-            </div>
-            <div class="image-profile">
-                <img src="../img/profile.png" alt="">
-                <div class="icon">
-                    <i class="fas fa-pen   fa-fw"></i>
-                </div>
-
-            </div>
-        </div>
-        <div class="menu">
-            <div class="menu-one">
-                <div class="menu-item">
-                    <img src="img/menu-1.jpg" alt="">
-                    <img src="img/menu-2.jpg" alt="">
-                </div>
-            </div>
-            <div class="menu-one">
-                <img src="img/menu-3.jpg" alt="">
-                <img src="img/menu-4.jpg" alt="">
-            </div>
-        </div>
-    </div>
+	<div class="pageId">
+		<svg
+			xmlns="http://www.w3.org/2000/svg"
+			width="22"
+			height="22"
+			fill="currentColor"
+			class="bi bi-arrow-left"
+			viewBox="0 0 16 16"
+		>
+			<path
+				fill-rule="evenodd"
+				d="M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 8.5H14.5A.5.5 0 0 0 15 8z"
+			/>
+		</svg>
+		<h3>Profile</h3>
+		<div></div>
+	</div>
+	<div class="container">
+		<div class="profile-detail">
+			<div class="detail">
+				<h3>Hai, Galih Permana</h3>
+				<span>Semoga harimu menyenangkan!</span>
+			</div>
+			<div class="image-profile">
+				<img src="../img/profile.png" alt="" />
+				<div class="icon">
+					<i class="fas fa-pen fa-fw"></i>
+				</div>
+			</div>
+		</div>
+		<div class="menu">
+			<div class="menu-one">
+				<div class="menu-item">
+					<img class="menu-1" src="img/menu-1.jpg" alt="" />
+					<img class="menu-2" src="img/menu-2.png" alt="" />
+				</div>
+			</div>
+			<div class="menu-one">
+				<img class="menu-3" src="img/menu-3.png" alt="" />
+				<img class="menu-4" src="img/menu-4.png" alt="" />
+			</div>
+		</div>
+	</div>
 </div>
