--- a/pages/profile.html
+++ b/pages/profile.html
@@ -25,13 +25,23 @@
         <div class="menu">
             <div class="menu-one">
                 <div class="menu-item">
-                    <img src="img/menu-1.jpg" alt="">
-                    <img src="img/menu-2.jpg" alt="">
+                    <img src="img/menu-1.png" alt="">
+                    <h3>Pesanan-Ku</h3>
+                </div>
+                <div class="menu-item">
+                    <img src="img/menu-2.png" alt="">
+                    <h3>Isi Saldo</h3>
                 </div>
             </div>
             <div class="menu-one">
-                <img src="img/menu-3.jpg" alt="">
-                <img src="img/menu-4.jpg" alt="">
+                <div class="menu-item">
+                    <img src="img/menu-3.png" alt="">
+                    <h3>Pengaturan</h3>
+                </div>
+                <div class="menu-item">
+                    <img src="img/menu-4.png" alt="">
+                    <h3>Pesanan Masuk</h3>
+                </div>
             </div>
         </div>
     </div>
