--- a/pages/profile.html
+++ b/pages/profile.html
@@ -22,7 +22,7 @@
 			<p>Selamat pagi!</p>
 		</div>
 		<div class="image-profile">
-			<img src="/img/profile.png" alt="" />
+			<img src="img/profile.png" alt="" />
 			<div class="icon">
 				<i class="fas fa-pen fa-fw"></i>
 			</div>
