--- a/pages/profile.html
+++ b/pages/profile.html
@@ -1,58 +1,49 @@
 <div class="profile">
-	<div class="pageId">
-		<svg
-			xmlns="http://www.w3.org/2000/svg"
-			width="22"
-			height="22"
-			fill="currentColor"
-			class="bi bi-arrow-left"
-			viewBox="0 0 16 16"
-		>
-			<path
-				fill-rule="evenodd"
-				d="M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 8.5H14.5A.5.5 0 0 0 15 8z"
-			/>
-		</svg>
-		<h3>Profile</h3>
-		<div></div>
-	</div>
-	<div class="profile-detail">
-		<div class="detail">
-			<h3>Hi, Galih Permana</h3>
-			<p>Selamat pagi!</p>
-		</div>
-		<div class="image-profile">
-			<img src="img/profile.png" alt="" />
-			<div class="icon">
-				<i class="fas fa-pen fa-fw"></i>
-			</div>
-		</div>
-	</div>
-	<div class="menu">
-		<div class="menu-one">
-			<div class="menu-item">
-				<img src="img/menu-1.png" alt="" />
-				<h3>Pesanan-Ku</h3>
-			</div>
-			<div class="menu-item">
-				<img src="img/menu-2.png" alt="" />
-				<h3>Isi Saldo</h3>
-			</div>
-			<div class="menu-item">
-				<img src="img/menu-2.png" alt="" />
-				<h3>Keluar</h3>
-			</div>
-		</div>
-		<div class="menu-one">
-			<div class="menu-item">
-				<img src="img/menu-3.png" alt="" />
-				<h3>Pengaturan</h3>
-			</div>
-			<div class="menu-item">
-				<img src="img/menu-4.png" alt="" />
-				<h3>Pesan Masuk</h3>
-			</div>
-		</div>
-	</div>
+    <div class="pageId">
+        <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-arrow-left"
+            viewBox="0 0 16 16">
+            <path fill-rule="evenodd"
+                d="M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 8.5H14.5A.5.5 0 0 0 15 8z" />
+        </svg>
+        <h3>Profile</h3>
+        <div></div>
+    </div>
+    <div class="profile-detail">
+        <div class="detail">
+            <h3>Hi, Galih Permana</h3>
+            <p>Selamat pagi!</p>
+        </div>
+        <div class="image-profile">
+            <img src="img/profile.png" alt="" />
+            <div class="icon">
+                <i class="fas fa-pen fa-fw"></i>
+            </div>
+        </div>
+    </div>
+    <div class="menu">
+        <div class="menu-one">
+            <div class="menu-item">
+                <img src="img/menu-1.png" alt="" />
+                <h3>Pesanan-Ku</h3>
+            </div>
+            <div class="menu-item">
+                <img src="img/menu-2.png" alt="" />
+                <h3>Isi Saldo</h3>
+            </div>
+            <div class="menu-item">
+                <img src="img/menu-5.png" alt="" />
+                <h3>Keluar</h3>
+            </div>
+        </div>
+        <div class="menu-one">
+            <div class="menu-item">
+                <img src="img/menu-3.png" alt="" />
+                <h3>Pengaturan</h3>
+            </div>
+            <div class="menu-item">
+                <img src="img/menu-4.png" alt="" />
+                <h3>Pesan Masuk</h3>
+            </div>
+        </div>
+    </div>
 </div>
->>>>>>> Auth
