--- a/pages/profile.html
+++ b/pages/profile.html
@@ -22,25 +22,25 @@
     </div>
     <div class="menu">
         <div class="menu-one">
-            <div class="menu-item">
+            <div class="menu-item pesanan">
                 <img src="img/menu-1.png" alt="" />
                 <h3>Pesanan-Ku</h3>
             </div>
-            <div class="menu-item">
+            <div class="menu-item saldo">
                 <img src="img/menu-2.png" alt="" />
                 <h3>Isi Saldo</h3>
             </div>
-            <div class="menu-item">
+            <div class="menu-item keluar">
                 <img src="img/menu-5.png" alt="" />
                 <h3>Keluar</h3>
             </div>
         </div>
         <div class="menu-one">
-            <div class="menu-item">
+            <div class="menu-item pengaturan">
                 <img src="img/menu-3.png" alt="" />
                 <h3>Pengaturan</h3>
             </div>
-            <div class="menu-item">
+            <div class="menu-item pesan">
                 <img src="img/menu-4.png" alt="" />
                 <h3>Pesan Masuk</h3>
             </div>
