auth, profile, but not username dynamic if logged

--- a/pages/home.html
+++ b/pages/home.html
@@ -1,5 +1,5 @@
 <header class="header">
-   <img src="img/profile.png" alt="" class="userProfile" />
+   <img src="img/profile-2.jpg" alt="" class="userProfile" />
    <div class="userName">
       <p>Selamat Datang</p>
       <h4>Galih Permana</h4>
