--- a/pages/profile.html
+++ b/pages/profile.html
@@ -14,7 +14,7 @@
             <p>Selamat pagi!</p>
         </div>
         <div class="image-profile">
-            <img src="img/profile.png" alt="" />
+            <img src="img/profile-2.jpg" alt="" />
             <div class="icon">
                 <i class="fas fa-pen fa-fw"></i>
             </div>
