--- a/pages/lacak.html
+++ b/pages/lacak.html
@@ -1,1 +1,50 @@
-tes
+<div class="pelacakan">
+    <div class="pageId">
+        <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-arrow-left"
+            viewBox="0 0 16 16">
+            <path fill-rule="evenodd"
+                d="M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 8.5H14.5A.5.5 0 0 0 15 8z" />
+        </svg>
+        <h3>Lacak Pesanan</h3>
+        <div></div>
+    </div>
+    <div class="pelacakan-detail">
+        <iframe
+            src="https://www.google.com/maps?q=Universitas%20Brawijaya%2C%20Jalan%20Veteran%20Malang%2C%20Ketawanggede%2C%20Kota%20Malang%2C%20Jawa%20Timur%2C%20Indonesia&z=14&t=&ie=UTF8&output=embed"></iframe>
+        <div class="card d-none">
+            <div class="line" onclick="showCard">
+            </div>
+            <div class="driver">
+                <div class="image">
+                    <img src="img/driver.png" alt="">
+                </div>
+                <div class="driver-profile">
+                    <h4>Imron Syawawi</h4>
+                    <p>Driver</p>
+                </div>
+                <div class="icon">
+                    <div class="icon-item">
+                        <i class="fas fa-phone fa-fw"></i>
+                    </div>
+                    <div class="icon-item">
+                        <i class="fas fa-comment-dots   fa-fw"></i>
+                    </div>
+                </div>
+            </div>
+            <div class="track">
+                <div class="lines">
+                </div>
+                <div class="track-detail">
+                    <div class="track-item">
+                        <p>Menjemput Barang</p>
+                        <h5>Jl. Griya Batu Aji Asri, Sagulung</p>
+                    </div>
+                    <div class="track-item">
+                        <p>Mengantar Barang</p>
+                        <h5>Jl. Griya Batu Aji Asri, Sagulung</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
